correction mobile

--- a/src/component/footer/footer.scss
+++ b/src/component/footer/footer.scss
@@ -78,7 +78,7 @@
 
 @media (max-width: 768px){
   .wrapperFooter{
-    height: 75vh;
+    height: 100vh;
 
     .containerSocial{
       flex-direction: column;
