--- a/src/component/projets/projet.scss
+++ b/src/component/projets/projet.scss
@@ -114,3 +114,8 @@
 }
 }
 }
+@media (max-width: 768px){
+    .wrapperProjet{
+        height: 250vh;
+    }
+}
