--- a/src/component/system/system.scss
+++ b/src/component/system/system.scss
@@ -149,6 +149,6 @@
 
 @media (max-width: 768px){
     .wrapperSystem{
-        height: 145vh;
+        height: 170vh;
     }
 }
